# AndroidNDKAAudioTests

./: README.md
app/: CMakeLists.txt  app-debug.apk  build.gradle
app/src/androidTest/java/com/example/riccardo/audiotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MP3Decoder.cpp  MP3Decoder.h  audio_common.cpp  audio_engine.cpp  audio_engine.h  audio_file.cpp  audio_file.h  audioengine.cpp  audioengine.h  jni_bridge.cpp  sine_generator.h  sound_gen.cpp  sound_gen.h  trace.cpp  trace.h
app/src/main/cpp/lame-3.100_libmp3lame/: mpglib_interface.c  util.h
app/src/main/java/com/example/riccardo/audiotest/: AudioEngine.java  MainActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/riccardo/audiotest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
